# RumbleGuard

./: .gitignore  README.md  angular.json  package-lock.json  package.json
src/: index.html  main.ts  styles.css
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dsp.rs  lib.rs  main.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  audio.ts
src/app/cabincomponent/: cabincomponent.html  cabincomponent.spec.ts  cabincomponent.ts
src/app/testing-button/: testing-button.html  testing-button.spec.ts  testing-button.ts
