[package]
name = "rumbleguard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "rumbleguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-websocket = "2"
tauri-plugin-geolocation = "2"
cpal = "0.15"
rustfft = "6.2"
num-complex = "0.4"
realfft = "3.5.0"
ringbuf = "0.5.0"
jni = "0.21"
ndk-context = "0.1.1"
percent-encoding = "2.3.2"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"                 # for setpriority() DSP thread RT scheduling
ndk-context = "0.1.1"
jni = { version = "0.21", default-features = false }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
